archives/infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: runerogue
  labels:
    name: runerogue
    environment: dev
